--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/supabase-js": "^2.33.1",
     "autoprefixer": "10.4.14",
     "next": "latest",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stream-chat-react": "^10.9.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
