--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stream-io/video-react-sdk": "^0.3.14",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.33.1",
     "autoprefixer": "10.4.14",
@@ -13,7 +14,9 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.66.1",
     "stream-chat-react": "^10.9.0",
+    "supports-color": "^9.4.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
